kustomize/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.indiaone.io
      secretName: app-indiaone-tls
  rules:
    - host: app.indiaone.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: flask-backend
                port:
                  name: backend
